# entailment-trees

./: .env.example  .gitignore  ARCHITECTURE.md  Claude.md  ENTAILMENT_TREES.md  HARNESS.md  QUICK_START_TREES.md  README.md  REALTIME_VIZ.md  claude-progress.txt  cleanup_tree.py  entailment_tree_tools.py  features.json  hypergraph_server.py  init.sh  migrate_evidence_format.py  pixi.toml  pyproject.toml  pytest.ini  setup.sh  start_visualization.sh  start_web.sh  test_agent_system.py  test_propagated_logs.py  test_realtime_update.py  typecheck_hypergraph.py  typecheck_tree.py  update_catalog.py
acousto-nmr-imaging/: FINDINGS.md  README.md  basic_signal_model.py
agent_system/: __init__.py  agent_cli.py  agent_orchestrator.py  api_keys.py  claim_evaluator.py  claude_client.py  cli.py  config.py  conversation_logger.py  entailment_checker.py  evidence_parser.py  gapmap_client.py  gapmap_example.py  hypergraph_manager.py  openrouter_client.py  orchestrator.py  path_utils.py  runtime_settings.py
backend/: __init__.py  main.py
docs/: _config.yml  about.md  demo.md  index.md
entailment_hypergraph/: README.md  STEAM_ENGINE.md  hypergraph_catalog.json  index.html  steam_engine_example.json  water_boiling_example.json
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
tests/: __init__.py  conftest.py  test_agent_orchestrator.py  test_conversation_logging.py  test_edison_async.py  test_edison_integration.py  test_evidence_parser.py  test_gapmap_integration.py  test_hypergraph_manager.py  test_logging_integration.py  test_propagated_logs.py
(+117 files in other folders)
